@@ -30,7 +30,8 @@ importFrom("stats", D, approxfun, cor # 'coef': from "bblme"; 'logLik': from "st
          , var, vcov
            )
 
-importFrom("utils", str, setTxtProgressBar, txtProgressBar, modifyList, head, tail)
+importFrom("utils", head, tail, capture.output, modifyList,
+	   str, setTxtProgressBar, txtProgressBar)
 
 importFrom("grDevices", col2rgb, dev.flush, dev.hold, dev.off, pdf, extendrange,
            gray)
@@ -99,7 +100,22 @@ import("pspline")
 importFrom("numDeriv", grad, jacobian)
 
 
-### Part I: Mainly former copula ###############################################
+### What we provide --- Exports --- ##########################################
+### -------------------------------
+
+exportMethods(## for "other" (i.e. non copula-package !) generics:
+    ## "base"
+    "%in%", dim, format,
+    ## "methods":
+    show,
+    ## from "graphics"
+    persp, contour, plot,
+    ## imported from "stats4" / "bbmle":
+    coef, confint, logLik, #-> hence AIC works [BIC: needs 'nobs' fix in bbmle]
+    profile, summary
+)
+
+## Part I: Mainly former copula ----------------------------------------
 
 export(dCopula, pCopula, rCopula)
 export(cCopula)
@@ -131,6 +147,9 @@ export(galambosCopula, huslerReissCopula, tawnCopula, tevCopula)
 export(plackettCopula)
 export(fgmCopula)
 
+## generic utilities:
+export(describeCop) # generic & methods
+
 ## "transformed" copula classes
 export(rotCopula)
 exportClasses(rotCopula)
@@ -153,7 +172,6 @@ exportClasses(fittedMV, fitCopula, fitMvdc)
 ## some parameters can be fixed ( ./R/fixedPar.R ) :
 export(fixParam, "fixedParam<-")
 
-
 ## estimation of tail dependence
 export(fitLambda)
 
@@ -168,8 +186,12 @@ export(gofCopula, gofMB, gofPB, gofEVCopula)
 ## cross-validation
 export(xvCopula)
 
+## Graphics -- Copula-enhanced Lattice and traditional graphics:
+export(cloud2, contourplot2, pairs2, qqplot2, splom2, wireframe2)
+
 ## ggraph utils
-export(pairwiseCcop, pairwiseIndepTest, pviTest, gpviTest, RSpobs, gofBTstat) # R/ggraph-tools.R
+export(pairwiseCcop, pairwiseIndepTest, pviTest, gpviTest,
+       RSpobs, gofBTstat) # R/ggraph-tools.R
 export(pairsColList, pairsRosenblatt, .pairsCond) # R/pairsRosenblatt.R
 
 ## other nonparametric tests
@@ -202,7 +224,7 @@ S3method(logLik, fittedMV)
 ## export(multcomp) ---> R/mult.R
 
 
-### Part II: Mainly former nacopula ############################################
+## Part II: Mainly former nacopula -------------------------------------
 
 exportClasses("acopula",
               "nacopula", "outer_nacopula",
@@ -248,8 +270,11 @@ export("copAMH", "copClayton", "copFrank", "copGumbel", "copJoe"
        ,"tauAMH", "tauJoe"
        ,"allComp" # <- maybe keep private ?
        ,"safeUroot"
-       ,"pairs2", "splom2", "qqplot2"
        )
+
+
+
+
 ## Deprecated (old names) --- move to 'Defunct', i.e., replace .Deprecated(.) by .Defunct()
 export(
     ## 2012-08-27 :
@@ -284,19 +309,4 @@ export(
   , Anfun
   , dcopula, pcopula, rcopula
   , dmvdc, pmvdc, rmvdc
-)
-
-exportMethods(## for both own and "other" generics:
-    ## for own generics :
-    prob, contourplot2, wireframe2, cloud2, splom2,
-    ## "base"
-    "%in%", dim, format,
-    ## "methods":
-    show,
-    ## from "graphics"
-    persp, contour, plot,
-
-    ## imported from "stats4" / "bbmle":
-    coef, confint, logLik, #-> hence AIC works [BIC: needs 'nobs' fix in bbmle]
-    profile, summary
 )
