@@ -40,6 +40,23 @@ ellipCopula <- function(family = c("normal", "t"), param = NA_real_, dim = 2L,
          "t" =           tCopula(param, dim = dim, dispstr = dispstr, df = df, ...))
 }
 
+setMethod(describeCop, c("ellipCopula", "character"), function(x, kind) {
+    kind <- match.arg(kind)
+    cl <- sub("Copula$", "", class(x)) # -> "t" / "normal"
+    if(kind == "very short") # e.g. for show() which has more parts
+        return(paste(cl, "copula"))
+    ## else
+    d <- dim(x)
+    ch <- paste(cl, "copula, dim. d =", d)
+    switch(kind <- match.arg(kind),
+	   short = ch,
+	   long = paste0(ch, "\n param.: ",
+			 capture.output(str(getParam(x, named=TRUE),
+					    give.head=FALSE))),
+	   stop("invalid 'kind': ", kind))
+})
+
+
 iTauEllipCopula <- function(copula, tau) sinpi(tau / 2)
 
 ## iRho --> only for normalCopula
