@@ -1,24 +1,25 @@
 \name{setTheta}
+\title{Specify the Parameter(s) of a Copula}
 \alias{setTheta}
 \alias{setTheta,acopula,ANY-method}
 \alias{setTheta,outer_nacopula,numeric-method}
 \alias{setTheta,copula,ANY-method}
 \alias{setTheta,ellipCopula,ANY-method}
-\title{Specify the Parameter(s) of a Copula}
+\alias{setTheta,xcopula,ANY-method}
 \description{
-%% FIXME:
   Set or change the parameter \eqn{\theta}{theta} (\code{theta}) of
   a copula.  The name \sQuote{theta} has been from its use in (nested)
   Archimedean copulas, where \code{x} is of class
   \code{"\linkS4class{acopula}"} or
   \code{"\linkS4class{outer_nacopula}"}.  This is used for constructing
   copula models with specified parameter, as, for example, in
-  \code{\link{onacopula}()}.
+  \code{\link{onacopula}()}, or also \code{\link{gofCopula}}.
 }
 \usage{
 setTheta(x, value, \dots)
 \S4method{setTheta}{acopula,ANY}(x, value, na.ok = TRUE, noCheck = FALSE, \dots)
 \S4method{setTheta}{copula,ANY} (x, value, na.ok = TRUE, noCheck = FALSE, \dots)
+\S4method{setTheta}{xcopula,ANY}(x, value, \dots)
 \S4method{setTheta}{outer_nacopula,numeric}(x, value, na.ok = TRUE, noCheck = FALSE, \dots)
 }
 \arguments{
@@ -36,6 +37,12 @@ setTheta(x, value, \dots)
   an \R object of the same class as \code{x}, with the main parameter (vector)
   (often called \code{theta}) set to \code{value}.
 %% FIXME: be more explicit about outer_nacopula  case
+}
+\seealso{
+  the \dQuote{inverse} function, a \dQuote{getter} method, is currently
+  called \code{getParam()} but not yet exported.
+% notably because we should be sure we like the *name*
+% --> "getTheta" in ../TODO
 }
 %\author{Martin Maechler}
 \examples{
